fix: update spacing for elements

--- a/practice-two/src/styles/pages/benefit.css
+++ b/practice-two/src/styles/pages/benefit.css
@@ -149,7 +149,7 @@
   }
 
   .benefit-items {
-    padding-top: 18px;
+    padding-top: 16px;
   }
 
   .benefit-item {
