--- a/practice-two/src/styles/pages/integrations.css
+++ b/practice-two/src/styles/pages/integrations.css
@@ -55,7 +55,7 @@
   }
 
   .integrations-title {
-    padding-top: 120px;
+    padding-top: 121px;
     line-height: 68px;
     letter-spacing: -0.667px;
   }
