--- a/practice-two/src/styles/pages/marketing.css
+++ b/practice-two/src/styles/pages/marketing.css
@@ -130,7 +130,7 @@
     line-height: 57.6px;
     letter-spacing: -0.666px;
     padding-bottom: 7.5px;
-    padding-top: 3.2px;
+    padding-top: 5px;
   }
 
   .marketing-desc {
