--- a/practice-two/src/styles/pages/supercharge.css
+++ b/practice-two/src/styles/pages/supercharge.css
@@ -118,7 +118,7 @@
   }
 
   .supercharge-title {
-    margin-top: 70.2px;
+    margin-top: 69px;
     font-size: 64px;
     line-height: 73.4px;
     letter-spacing: -0.9px;
